<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Caption"
        android:text="@string/pre_seleccion"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/config_unidad_medida"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Spinner
        android:id="@+id/sp_unidadMedida"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_default"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/padding_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Spinner
        android:id="@+id/sp_turno"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_default"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="@+id/sp_unidadMedida"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Spinner
        android:id="@+id/tv_clase_tareo"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_default"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="@+id/sp_turno"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/config_turno"
        app:layout_constraintStart_toStartOf="@+id/sp_unidadMedida"
        app:layout_constraintTop_toBottomOf="@+id/sp_unidadMedida" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/config_clase"
        app:layout_constraintStart_toStartOf="@+id/sp_turno"
        app:layout_constraintTop_toBottomOf="@+id/sp_turno" />

</androidx.constraintlayout.widget.ConstraintLayout>